bug z-index

--- a/main.css
+++ b/main.css
@@ -24,6 +24,7 @@
 
 .mobile-menu{
   position: fixed;
+  z-index: 1;
 
   height: 100vh;
   width: 100vw;
@@ -113,6 +114,7 @@ nav {
   position: fixed;
   top: 0;
   transition: top 0.6s;
+  z-index: 1;
 }
 nav ul {
   display: flex;
@@ -177,6 +179,7 @@ nav ul {
   justify-content: center;
   /*margin-left: 10vw;*/
   position: relative;
+  z-index: 0;
   top: 30%;
 
   article{
